main/y.output
Terminals unused in grammar

    T_Return
    T_NEQ
    ID
    ND
    DD
    T_String
    T_OB
    T_Def
    T_List


State 88 conflicts: 2 shift/reduce


Grammar

    0 $accept: StartDebugger $end

    1 $@1: ε

    2 StartDebugger: $@1 StartParse T_EndOfFile

    3 constant: T_Number

    4 term: T_ID
    5     | constant

    6 StartParse: T_NL StartParse

    7 $@2: ε

    8 StartParse: finalStatements T_NL $@2 StartParse
    9           | finalStatements T_NL

   10 basic_stmt: break_stmt
   11           | assign_stmt
   12           | arith_exp
   13           | bool_exp
   14           | print_stmt

   15 arith_exp: term
   16          | arith_exp T_PL arith_exp
   17          | arith_exp T_MN arith_exp
   18          | arith_exp T_ML arith_exp
   19          | arith_exp T_DV arith_exp
   20          | T_MN arith_exp
   21          | T_OP arith_exp T_CP

   22 bool_exp: bool_term T_Or bool_term
   23         | arith_exp T_LT arith_exp
   24         | bool_term T_And bool_term
   25         | arith_exp T_GT arith_exp
   26         | arith_exp T_ELT arith_exp
   27         | arith_exp T_EGT arith_exp
   28         | bool_term

   29 bool_term: bool_factor
   30          | arith_exp T_EQ arith_exp
   31          | arith_exp T_EQ bool_term
   32          | T_True
   33          | T_False

   34 bool_factor: T_Not bool_factor
   35            | T_OP bool_exp T_CP

   36 break_stmt: T_Break

   37 assign_stmt: T_ID T_EQL arith_exp
   38            | T_ID T_EQL bool_exp

   39 print_stmt: T_Print T_OP term T_CP

   40 finalStatements: basic_stmt
   41                | cmpd_stmt
   42                | error T_NL

   43 cmpd_stmt: if_stmt
   44          | while_stmt
   45          | for_stmt

   46 if_stmt: T_If bool_exp T_Cln start_suite
   47        | T_If bool_exp T_Cln start_suite elif_stmts

   48 elif_stmts: else_stmt
   49           | T_Elif bool_exp T_Cln start_suite elif_stmts

   50 else_stmt: T_Else T_Cln start_suite

   51 while_stmt: T_While bool_exp T_Cln start_suite

   52 myrange: term
   53        | term T_Comma term
   54        | term T_Comma term T_Comma term

   55 for_stmt: T_For T_ID T_In T_Range T_OP myrange T_CP T_Cln start_suite

   56 start_suite: basic_stmt

   57 $@3: ε

   58 start_suite: T_NL $@3 finalStatements suite

   59 suite: T_NL finalStatements suite
   60      | T_NL end_suite

   61 $@4: ε

   62 end_suite: T_CB $@4 finalStatements

   63 $@5: ε

   64 end_suite: T_CB $@5
   65          | ε


Terminals, with rules where they appear

    $end (0) 0
    error (256) 42
    T_EndOfFile (258) 2
    T_Return (259)
    T_Number (260) 3
    T_True (261) 32
    T_False (262) 33
    T_ID (263) 4 37 38 55
    T_Print (264) 39
    T_Range (265) 55
    T_Cln (266) 46 47 49 50 51 55
    T_NL (267) 6 8 9 42 58 59 60
    T_EQL (268) 37 38
    T_NEQ (269)
    T_EQ (270) 30 31
    T_GT (271) 25
    T_LT (272) 23
    T_EGT (273) 27
    T_ELT (274) 26
    T_Or (275) 22
    T_And (276) 24
    T_Not (277) 34
    T_In (278) 55
    ID (279)
    ND (280)
    DD (281)
    T_String (282)
    T_If (283) 46 47
    T_Elif (284) 49
    T_While (285) 51
    T_For (286) 55
    T_Else (287) 50
    T_Break (288) 36
    T_MN (289) 17 20
    T_PL (290) 16
    T_DV (291) 19
    T_ML (292) 18
    T_OP (293) 21 35 39 55
    T_CP (294) 21 35 39 55
    T_OB (295)
    T_CB (296) 62 64
    T_Def (297)
    T_Comma (298) 53 54
    T_List (299)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    StartDebugger <node> (46)
        on left: 2
        on right: 0
    $@1 (47)
        on left: 1
        on right: 2
    constant <node> (48)
        on left: 3
        on right: 5
    term <node> (49)
        on left: 4 5
        on right: 15 39 52 53 54
    StartParse <node> (50)
        on left: 6 8 9
        on right: 2 6 8
    $@2 (51)
        on left: 7
        on right: 8
    basic_stmt <node> (52)
        on left: 10 11 12 13 14
        on right: 40 56
    arith_exp <node> (53)
        on left: 15 16 17 18 19 20 21
        on right: 12 16 17 18 19 20 21 23 25 26 27 30 31 37
    bool_exp <node> (54)
        on left: 22 23 24 25 26 27 28
        on right: 13 35 38 46 47 49 51
    bool_term <node> (55)
        on left: 29 30 31 32 33
        on right: 22 24 28 31
    bool_factor <node> (56)
        on left: 34 35
        on right: 29 34
    break_stmt <node> (57)
        on left: 36
        on right: 10
    assign_stmt <node> (58)
        on left: 37 38
        on right: 11
    print_stmt <node> (59)
        on left: 39
        on right: 14
    finalStatements <node> (60)
        on left: 40 41 42
        on right: 8 9 58 59 62
    cmpd_stmt <node> (61)
        on left: 43 44 45
        on right: 41
    if_stmt <node> (62)
        on left: 46 47
        on right: 43
    elif_stmts <node> (63)
        on left: 48 49
        on right: 47 49
    else_stmt <node> (64)
        on left: 50
        on right: 48
    while_stmt <node> (65)
        on left: 51
        on right: 44
    myrange <node> (66)
        on left: 52 53 54
        on right: 55
    for_stmt <node> (67)
        on left: 55
        on right: 45
    start_suite <node> (68)
        on left: 56 58
        on right: 46 47 49 50 51 55
    $@3 (69)
        on left: 57
        on right: 58
    suite <node> (70)
        on left: 59 60
        on right: 58 59
    end_suite <node> (71)
        on left: 62 64 65
        on right: 60
    $@4 (72)
        on left: 61
        on right: 62
    $@5 (73)
        on left: 63
        on right: 64


State 0

    0 $accept: • StartDebugger $end

    $default  reduce using rule 1 ($@1)

    StartDebugger  go to state 1
    $@1            go to state 2


State 1

    0 $accept: StartDebugger • $end

    $end  shift, and go to state 3


State 2

    2 StartDebugger: $@1 • StartParse T_EndOfFile

    error     shift, and go to state 4
    T_Number  shift, and go to state 5
    T_True    shift, and go to state 6
    T_False   shift, and go to state 7
    T_ID      shift, and go to state 8
    T_Print   shift, and go to state 9
    T_NL      shift, and go to state 10
    T_Not     shift, and go to state 11
    T_If      shift, and go to state 12
    T_While   shift, and go to state 13
    T_For     shift, and go to state 14
    T_Break   shift, and go to state 15
    T_MN      shift, and go to state 16
    T_OP      shift, and go to state 17

    constant         go to state 18
    term             go to state 19
    StartParse       go to state 20
    basic_stmt       go to state 21
    arith_exp        go to state 22
    bool_exp         go to state 23
    bool_term        go to state 24
    bool_factor      go to state 25
    break_stmt       go to state 26
    assign_stmt      go to state 27
    print_stmt       go to state 28
    finalStatements  go to state 29
    cmpd_stmt        go to state 30
    if_stmt          go to state 31
    while_stmt       go to state 32
    for_stmt         go to state 33


State 3

    0 $accept: StartDebugger $end •

    $default  accept


State 4

   42 finalStatements: error • T_NL

    T_NL  shift, and go to state 34


State 5

    3 constant: T_Number •

    $default  reduce using rule 3 (constant)


State 6

   32 bool_term: T_True •

    $default  reduce using rule 32 (bool_term)


State 7

   33 bool_term: T_False •

    $default  reduce using rule 33 (bool_term)


State 8

    4 term: T_ID •
   37 assign_stmt: T_ID • T_EQL arith_exp
   38            | T_ID • T_EQL bool_exp

    T_EQL  shift, and go to state 35

    $default  reduce using rule 4 (term)


State 9

   39 print_stmt: T_Print • T_OP term T_CP

    T_OP  shift, and go to state 36


State 10

    6 StartParse: T_NL • StartParse

    error     shift, and go to state 4
    T_Number  shift, and go to state 5
    T_True    shift, and go to state 6
    T_False   shift, and go to state 7
    T_ID      shift, and go to state 8
    T_Print   shift, and go to state 9
    T_NL      shift, and go to state 10
    T_Not     shift, and go to state 11
    T_If      shift, and go to state 12
    T_While   shift, and go to state 13
    T_For     shift, and go to state 14
    T_Break   shift, and go to state 15
    T_MN      shift, and go to state 16
    T_OP      shift, and go to state 17

    constant         go to state 18
    term             go to state 19
    StartParse       go to state 37
    basic_stmt       go to state 21
    arith_exp        go to state 22
    bool_exp         go to state 23
    bool_term        go to state 24
    bool_factor      go to state 25
    break_stmt       go to state 26
    assign_stmt      go to state 27
    print_stmt       go to state 28
    finalStatements  go to state 29
    cmpd_stmt        go to state 30
    if_stmt          go to state 31
    while_stmt       go to state 32
    for_stmt         go to state 33


State 11

   34 bool_factor: T_Not • bool_factor

    T_Not  shift, and go to state 11
    T_OP   shift, and go to state 38

    bool_factor  go to state 39


State 12

   46 if_stmt: T_If • bool_exp T_Cln start_suite
   47        | T_If • bool_exp T_Cln start_suite elif_stmts

    T_Number  shift, and go to state 5
    T_True    shift, and go to state 6
    T_False   shift, and go to state 7
    T_ID      shift, and go to state 40
    T_Not     shift, and go to state 11
    T_MN      shift, and go to state 16
    T_OP      shift, and go to state 17

    constant     go to state 18
    term         go to state 19
    arith_exp    go to state 41
    bool_exp     go to state 42
    bool_term    go to state 24
    bool_factor  go to state 25


State 13

   51 while_stmt: T_While • bool_exp T_Cln start_suite

    T_Number  shift, and go to state 5
    T_True    shift, and go to state 6
    T_False   shift, and go to state 7
    T_ID      shift, and go to state 40
    T_Not     shift, and go to state 11
    T_MN      shift, and go to state 16
    T_OP      shift, and go to state 17

    constant     go to state 18
    term         go to state 19
    arith_exp    go to state 41
    bool_exp     go to state 43
    bool_term    go to state 24
    bool_factor  go to state 25


State 14

   55 for_stmt: T_For • T_ID T_In T_Range T_OP myrange T_CP T_Cln start_suite

    T_ID  shift, and go to state 44


State 15

   36 break_stmt: T_Break •

    $default  reduce using rule 36 (break_stmt)


State 16

   20 arith_exp: T_MN • arith_exp

    T_Number  shift, and go to state 5
    T_ID      shift, and go to state 40
    T_MN      shift, and go to state 16
    T_OP      shift, and go to state 45

    constant   go to state 18
    term       go to state 19
    arith_exp  go to state 46


State 17

   21 arith_exp: T_OP • arith_exp T_CP
   35 bool_factor: T_OP • bool_exp T_CP

    T_Number  shift, and go to state 5
    T_True    shift, and go to state 6
    T_False   shift, and go to state 7
    T_ID      shift, and go to state 40
    T_Not     shift, and go to state 11
    T_MN      shift, and go to state 16
    T_OP      shift, and go to state 17

    constant     go to state 18
    term         go to state 19
    arith_exp    go to state 47
    bool_exp     go to state 48
    bool_term    go to state 24
    bool_factor  go to state 25


State 18

    5 term: constant •

    $default  reduce using rule 5 (term)


State 19

   15 arith_exp: term •

    $default  reduce using rule 15 (arith_exp)


State 20

    2 StartDebugger: $@1 StartParse • T_EndOfFile

    T_EndOfFile  shift, and go to state 49


State 21

   40 finalStatements: basic_stmt •

    $default  reduce using rule 40 (finalStatements)


State 22

   12 basic_stmt: arith_exp •
   16 arith_exp: arith_exp • T_PL arith_exp
   17          | arith_exp • T_MN arith_exp
   18          | arith_exp • T_ML arith_exp
   19          | arith_exp • T_DV arith_exp
   23 bool_exp: arith_exp • T_LT arith_exp
   25         | arith_exp • T_GT arith_exp
   26         | arith_exp • T_ELT arith_exp
   27         | arith_exp • T_EGT arith_exp
   30 bool_term: arith_exp • T_EQ arith_exp
   31          | arith_exp • T_EQ bool_term

    T_EQ   shift, and go to state 50
    T_GT   shift, and go to state 51
    T_LT   shift, and go to state 52
    T_EGT  shift, and go to state 53
    T_ELT  shift, and go to state 54
    T_MN   shift, and go to state 55
    T_PL   shift, and go to state 56
    T_DV   shift, and go to state 57
    T_ML   shift, and go to state 58

    $default  reduce using rule 12 (basic_stmt)


State 23

   13 basic_stmt: bool_exp •

    $default  reduce using rule 13 (basic_stmt)


State 24

   22 bool_exp: bool_term • T_Or bool_term
   24         | bool_term • T_And bool_term
   28         | bool_term •

    T_Or   shift, and go to state 59
    T_And  shift, and go to state 60

    $default  reduce using rule 28 (bool_exp)


State 25

   29 bool_term: bool_factor •

    $default  reduce using rule 29 (bool_term)


State 26

   10 basic_stmt: break_stmt •

    $default  reduce using rule 10 (basic_stmt)


State 27

   11 basic_stmt: assign_stmt •

    $default  reduce using rule 11 (basic_stmt)


State 28

   14 basic_stmt: print_stmt •

    $default  reduce using rule 14 (basic_stmt)


State 29

    8 StartParse: finalStatements • T_NL $@2 StartParse
    9           | finalStatements • T_NL

    T_NL  shift, and go to state 61


State 30

   41 finalStatements: cmpd_stmt •

    $default  reduce using rule 41 (finalStatements)


State 31

   43 cmpd_stmt: if_stmt •

    $default  reduce using rule 43 (cmpd_stmt)


State 32

   44 cmpd_stmt: while_stmt •

    $default  reduce using rule 44 (cmpd_stmt)


State 33

   45 cmpd_stmt: for_stmt •

    $default  reduce using rule 45 (cmpd_stmt)


State 34

   42 finalStatements: error T_NL •

    $default  reduce using rule 42 (finalStatements)


State 35

   37 assign_stmt: T_ID T_EQL • arith_exp
   38            | T_ID T_EQL • bool_exp

    T_Number  shift, and go to state 5
    T_True    shift, and go to state 6
    T_False   shift, and go to state 7
    T_ID      shift, and go to state 40
    T_Not     shift, and go to state 11
    T_MN      shift, and go to state 16
    T_OP      shift, and go to state 17

    constant     go to state 18
    term         go to state 19
    arith_exp    go to state 62
    bool_exp     go to state 63
    bool_term    go to state 24
    bool_factor  go to state 25


State 36

   39 print_stmt: T_Print T_OP • term T_CP

    T_Number  shift, and go to state 5
    T_ID      shift, and go to state 40

    constant  go to state 18
    term      go to state 64


State 37

    6 StartParse: T_NL StartParse •

    $default  reduce using rule 6 (StartParse)


State 38

   35 bool_factor: T_OP • bool_exp T_CP

    T_Number  shift, and go to state 5
    T_True    shift, and go to state 6
    T_False   shift, and go to state 7
    T_ID      shift, and go to state 40
    T_Not     shift, and go to state 11
    T_MN      shift, and go to state 16
    T_OP      shift, and go to state 17

    constant     go to state 18
    term         go to state 19
    arith_exp    go to state 41
    bool_exp     go to state 48
    bool_term    go to state 24
    bool_factor  go to state 25


State 39

   34 bool_factor: T_Not bool_factor •

    $default  reduce using rule 34 (bool_factor)


State 40

    4 term: T_ID •

    $default  reduce using rule 4 (term)


State 41

   16 arith_exp: arith_exp • T_PL arith_exp
   17          | arith_exp • T_MN arith_exp
   18          | arith_exp • T_ML arith_exp
   19          | arith_exp • T_DV arith_exp
   23 bool_exp: arith_exp • T_LT arith_exp
   25         | arith_exp • T_GT arith_exp
   26         | arith_exp • T_ELT arith_exp
   27         | arith_exp • T_EGT arith_exp
   30 bool_term: arith_exp • T_EQ arith_exp
   31          | arith_exp • T_EQ bool_term

    T_EQ   shift, and go to state 50
    T_GT   shift, and go to state 51
    T_LT   shift, and go to state 52
    T_EGT  shift, and go to state 53
    T_ELT  shift, and go to state 54
    T_MN   shift, and go to state 55
    T_PL   shift, and go to state 56
    T_DV   shift, and go to state 57
    T_ML   shift, and go to state 58


State 42

   46 if_stmt: T_If bool_exp • T_Cln start_suite
   47        | T_If bool_exp • T_Cln start_suite elif_stmts

    T_Cln  shift, and go to state 65


State 43

   51 while_stmt: T_While bool_exp • T_Cln start_suite

    T_Cln  shift, and go to state 66


State 44

   55 for_stmt: T_For T_ID • T_In T_Range T_OP myrange T_CP T_Cln start_suite

    T_In  shift, and go to state 67


State 45

   21 arith_exp: T_OP • arith_exp T_CP

    T_Number  shift, and go to state 5
    T_ID      shift, and go to state 40
    T_MN      shift, and go to state 16
    T_OP      shift, and go to state 45

    constant   go to state 18
    term       go to state 19
    arith_exp  go to state 68


State 46

   16 arith_exp: arith_exp • T_PL arith_exp
   17          | arith_exp • T_MN arith_exp
   18          | arith_exp • T_ML arith_exp
   19          | arith_exp • T_DV arith_exp
   20          | T_MN arith_exp •

    T_DV  shift, and go to state 57
    T_ML  shift, and go to state 58

    $default  reduce using rule 20 (arith_exp)


State 47

   16 arith_exp: arith_exp • T_PL arith_exp
   17          | arith_exp • T_MN arith_exp
   18          | arith_exp • T_ML arith_exp
   19          | arith_exp • T_DV arith_exp
   21          | T_OP arith_exp • T_CP
   23 bool_exp: arith_exp • T_LT arith_exp
   25         | arith_exp • T_GT arith_exp
   26         | arith_exp • T_ELT arith_exp
   27         | arith_exp • T_EGT arith_exp
   30 bool_term: arith_exp • T_EQ arith_exp
   31          | arith_exp • T_EQ bool_term

    T_EQ   shift, and go to state 50
    T_GT   shift, and go to state 51
    T_LT   shift, and go to state 52
    T_EGT  shift, and go to state 53
    T_ELT  shift, and go to state 54
    T_MN   shift, and go to state 55
    T_PL   shift, and go to state 56
    T_DV   shift, and go to state 57
    T_ML   shift, and go to state 58
    T_CP   shift, and go to state 69


State 48

   35 bool_factor: T_OP bool_exp • T_CP

    T_CP  shift, and go to state 70


State 49

    2 StartDebugger: $@1 StartParse T_EndOfFile •

    $default  reduce using rule 2 (StartDebugger)


State 50

   30 bool_term: arith_exp T_EQ • arith_exp
   31          | arith_exp T_EQ • bool_term

    T_Number  shift, and go to state 5
    T_True    shift, and go to state 6
    T_False   shift, and go to state 7
    T_ID      shift, and go to state 40
    T_Not     shift, and go to state 11
    T_MN      shift, and go to state 16
    T_OP      shift, and go to state 17

    constant     go to state 18
    term         go to state 19
    arith_exp    go to state 71
    bool_term    go to state 72
    bool_factor  go to state 25


State 51

   25 bool_exp: arith_exp T_GT • arith_exp

    T_Number  shift, and go to state 5
    T_ID      shift, and go to state 40
    T_MN      shift, and go to state 16
    T_OP      shift, and go to state 45

    constant   go to state 18
    term       go to state 19
    arith_exp  go to state 73


State 52

   23 bool_exp: arith_exp T_LT • arith_exp

    T_Number  shift, and go to state 5
    T_ID      shift, and go to state 40
    T_MN      shift, and go to state 16
    T_OP      shift, and go to state 45

    constant   go to state 18
    term       go to state 19
    arith_exp  go to state 74


State 53

   27 bool_exp: arith_exp T_EGT • arith_exp

    T_Number  shift, and go to state 5
    T_ID      shift, and go to state 40
    T_MN      shift, and go to state 16
    T_OP      shift, and go to state 45

    constant   go to state 18
    term       go to state 19
    arith_exp  go to state 75


State 54

   26 bool_exp: arith_exp T_ELT • arith_exp

    T_Number  shift, and go to state 5
    T_ID      shift, and go to state 40
    T_MN      shift, and go to state 16
    T_OP      shift, and go to state 45

    constant   go to state 18
    term       go to state 19
    arith_exp  go to state 76


State 55

   17 arith_exp: arith_exp T_MN • arith_exp

    T_Number  shift, and go to state 5
    T_ID      shift, and go to state 40
    T_MN      shift, and go to state 16
    T_OP      shift, and go to state 45

    constant   go to state 18
    term       go to state 19
    arith_exp  go to state 77


State 56

   16 arith_exp: arith_exp T_PL • arith_exp

    T_Number  shift, and go to state 5
    T_ID      shift, and go to state 40
    T_MN      shift, and go to state 16
    T_OP      shift, and go to state 45

    constant   go to state 18
    term       go to state 19
    arith_exp  go to state 78


State 57

   19 arith_exp: arith_exp T_DV • arith_exp

    T_Number  shift, and go to state 5
    T_ID      shift, and go to state 40
    T_MN      shift, and go to state 16
    T_OP      shift, and go to state 45

    constant   go to state 18
    term       go to state 19
    arith_exp  go to state 79


State 58

   18 arith_exp: arith_exp T_ML • arith_exp

    T_Number  shift, and go to state 5
    T_ID      shift, and go to state 40
    T_MN      shift, and go to state 16
    T_OP      shift, and go to state 45

    constant   go to state 18
    term       go to state 19
    arith_exp  go to state 80


State 59

   22 bool_exp: bool_term T_Or • bool_term

    T_Number  shift, and go to state 5
    T_True    shift, and go to state 6
    T_False   shift, and go to state 7
    T_ID      shift, and go to state 40
    T_Not     shift, and go to state 11
    T_MN      shift, and go to state 16
    T_OP      shift, and go to state 17

    constant     go to state 18
    term         go to state 19
    arith_exp    go to state 81
    bool_term    go to state 82
    bool_factor  go to state 25


State 60

   24 bool_exp: bool_term T_And • bool_term

    T_Number  shift, and go to state 5
    T_True    shift, and go to state 6
    T_False   shift, and go to state 7
    T_ID      shift, and go to state 40
    T_Not     shift, and go to state 11
    T_MN      shift, and go to state 16
    T_OP      shift, and go to state 17

    constant     go to state 18
    term         go to state 19
    arith_exp    go to state 81
    bool_term    go to state 83
    bool_factor  go to state 25


State 61

    8 StartParse: finalStatements T_NL • $@2 StartParse
    9           | finalStatements T_NL •

    T_EndOfFile  reduce using rule 9 (StartParse)
    $default     reduce using rule 7 ($@2)

    $@2  go to state 84


State 62

   16 arith_exp: arith_exp • T_PL arith_exp
   17          | arith_exp • T_MN arith_exp
   18          | arith_exp • T_ML arith_exp
   19          | arith_exp • T_DV arith_exp
   23 bool_exp: arith_exp • T_LT arith_exp
   25         | arith_exp • T_GT arith_exp
   26         | arith_exp • T_ELT arith_exp
   27         | arith_exp • T_EGT arith_exp
   30 bool_term: arith_exp • T_EQ arith_exp
   31          | arith_exp • T_EQ bool_term
   37 assign_stmt: T_ID T_EQL arith_exp •

    T_EQ   shift, and go to state 50
    T_GT   shift, and go to state 51
    T_LT   shift, and go to state 52
    T_EGT  shift, and go to state 53
    T_ELT  shift, and go to state 54
    T_MN   shift, and go to state 55
    T_PL   shift, and go to state 56
    T_DV   shift, and go to state 57
    T_ML   shift, and go to state 58

    $default  reduce using rule 37 (assign_stmt)


State 63

   38 assign_stmt: T_ID T_EQL bool_exp •

    $default  reduce using rule 38 (assign_stmt)


State 64

   39 print_stmt: T_Print T_OP term • T_CP

    T_CP  shift, and go to state 85


State 65

   46 if_stmt: T_If bool_exp T_Cln • start_suite
   47        | T_If bool_exp T_Cln • start_suite elif_stmts

    T_Number  shift, and go to state 5
    T_True    shift, and go to state 6
    T_False   shift, and go to state 7
    T_ID      shift, and go to state 8
    T_Print   shift, and go to state 9
    T_NL      shift, and go to state 86
    T_Not     shift, and go to state 11
    T_Break   shift, and go to state 15
    T_MN      shift, and go to state 16
    T_OP      shift, and go to state 17

    constant     go to state 18
    term         go to state 19
    basic_stmt   go to state 87
    arith_exp    go to state 22
    bool_exp     go to state 23
    bool_term    go to state 24
    bool_factor  go to state 25
    break_stmt   go to state 26
    assign_stmt  go to state 27
    print_stmt   go to state 28
    start_suite  go to state 88


State 66

   51 while_stmt: T_While bool_exp T_Cln • start_suite

    T_Number  shift, and go to state 5
    T_True    shift, and go to state 6
    T_False   shift, and go to state 7
    T_ID      shift, and go to state 8
    T_Print   shift, and go to state 9
    T_NL      shift, and go to state 86
    T_Not     shift, and go to state 11
    T_Break   shift, and go to state 15
    T_MN      shift, and go to state 16
    T_OP      shift, and go to state 17

    constant     go to state 18
    term         go to state 19
    basic_stmt   go to state 87
    arith_exp    go to state 22
    bool_exp     go to state 23
    bool_term    go to state 24
    bool_factor  go to state 25
    break_stmt   go to state 26
    assign_stmt  go to state 27
    print_stmt   go to state 28
    start_suite  go to state 89


State 67

   55 for_stmt: T_For T_ID T_In • T_Range T_OP myrange T_CP T_Cln start_suite

    T_Range  shift, and go to state 90


State 68

   16 arith_exp: arith_exp • T_PL arith_exp
   17          | arith_exp • T_MN arith_exp
   18          | arith_exp • T_ML arith_exp
   19          | arith_exp • T_DV arith_exp
   21          | T_OP arith_exp • T_CP

    T_MN  shift, and go to state 55
    T_PL  shift, and go to state 56
    T_DV  shift, and go to state 57
    T_ML  shift, and go to state 58
    T_CP  shift, and go to state 69


State 69

   21 arith_exp: T_OP arith_exp T_CP •

    $default  reduce using rule 21 (arith_exp)


State 70

   35 bool_factor: T_OP bool_exp T_CP •

    $default  reduce using rule 35 (bool_factor)


State 71

   16 arith_exp: arith_exp • T_PL arith_exp
   17          | arith_exp • T_MN arith_exp
   18          | arith_exp • T_ML arith_exp
   19          | arith_exp • T_DV arith_exp
   30 bool_term: arith_exp • T_EQ arith_exp
   30          | arith_exp T_EQ arith_exp •
   31          | arith_exp • T_EQ bool_term

    T_EQ  shift, and go to state 50
    T_MN  shift, and go to state 55
    T_PL  shift, and go to state 56
    T_DV  shift, and go to state 57
    T_ML  shift, and go to state 58

    $default  reduce using rule 30 (bool_term)


State 72

   31 bool_term: arith_exp T_EQ bool_term •

    $default  reduce using rule 31 (bool_term)


State 73

   16 arith_exp: arith_exp • T_PL arith_exp
   17          | arith_exp • T_MN arith_exp
   18          | arith_exp • T_ML arith_exp
   19          | arith_exp • T_DV arith_exp
   25 bool_exp: arith_exp T_GT arith_exp •

    T_MN  shift, and go to state 55
    T_PL  shift, and go to state 56
    T_DV  shift, and go to state 57
    T_ML  shift, and go to state 58

    $default  reduce using rule 25 (bool_exp)


State 74

   16 arith_exp: arith_exp • T_PL arith_exp
   17          | arith_exp • T_MN arith_exp
   18          | arith_exp • T_ML arith_exp
   19          | arith_exp • T_DV arith_exp
   23 bool_exp: arith_exp T_LT arith_exp •

    T_MN  shift, and go to state 55
    T_PL  shift, and go to state 56
    T_DV  shift, and go to state 57
    T_ML  shift, and go to state 58

    $default  reduce using rule 23 (bool_exp)


State 75

   16 arith_exp: arith_exp • T_PL arith_exp
   17          | arith_exp • T_MN arith_exp
   18          | arith_exp • T_ML arith_exp
   19          | arith_exp • T_DV arith_exp
   27 bool_exp: arith_exp T_EGT arith_exp •

    T_MN  shift, and go to state 55
    T_PL  shift, and go to state 56
    T_DV  shift, and go to state 57
    T_ML  shift, and go to state 58

    $default  reduce using rule 27 (bool_exp)


State 76

   16 arith_exp: arith_exp • T_PL arith_exp
   17          | arith_exp • T_MN arith_exp
   18          | arith_exp • T_ML arith_exp
   19          | arith_exp • T_DV arith_exp
   26 bool_exp: arith_exp T_ELT arith_exp •

    T_MN  shift, and go to state 55
    T_PL  shift, and go to state 56
    T_DV  shift, and go to state 57
    T_ML  shift, and go to state 58

    $default  reduce using rule 26 (bool_exp)


State 77

   16 arith_exp: arith_exp • T_PL arith_exp
   17          | arith_exp • T_MN arith_exp
   17          | arith_exp T_MN arith_exp •
   18          | arith_exp • T_ML arith_exp
   19          | arith_exp • T_DV arith_exp

    T_DV  shift, and go to state 57
    T_ML  shift, and go to state 58

    $default  reduce using rule 17 (arith_exp)


State 78

   16 arith_exp: arith_exp • T_PL arith_exp
   16          | arith_exp T_PL arith_exp •
   17          | arith_exp • T_MN arith_exp
   18          | arith_exp • T_ML arith_exp
   19          | arith_exp • T_DV arith_exp

    T_DV  shift, and go to state 57
    T_ML  shift, and go to state 58

    $default  reduce using rule 16 (arith_exp)


State 79

   16 arith_exp: arith_exp • T_PL arith_exp
   17          | arith_exp • T_MN arith_exp
   18          | arith_exp • T_ML arith_exp
   19          | arith_exp • T_DV arith_exp
   19          | arith_exp T_DV arith_exp •

    $default  reduce using rule 19 (arith_exp)


State 80

   16 arith_exp: arith_exp • T_PL arith_exp
   17          | arith_exp • T_MN arith_exp
   18          | arith_exp • T_ML arith_exp
   18          | arith_exp T_ML arith_exp •
   19          | arith_exp • T_DV arith_exp

    $default  reduce using rule 18 (arith_exp)


State 81

   16 arith_exp: arith_exp • T_PL arith_exp
   17          | arith_exp • T_MN arith_exp
   18          | arith_exp • T_ML arith_exp
   19          | arith_exp • T_DV arith_exp
   30 bool_term: arith_exp • T_EQ arith_exp
   31          | arith_exp • T_EQ bool_term

    T_EQ  shift, and go to state 50
    T_MN  shift, and go to state 55
    T_PL  shift, and go to state 56
    T_DV  shift, and go to state 57
    T_ML  shift, and go to state 58


State 82

   22 bool_exp: bool_term T_Or bool_term •

    $default  reduce using rule 22 (bool_exp)


State 83

   24 bool_exp: bool_term T_And bool_term •

    $default  reduce using rule 24 (bool_exp)


State 84

    8 StartParse: finalStatements T_NL $@2 • StartParse

    error     shift, and go to state 4
    T_Number  shift, and go to state 5
    T_True    shift, and go to state 6
    T_False   shift, and go to state 7
    T_ID      shift, and go to state 8
    T_Print   shift, and go to state 9
    T_NL      shift, and go to state 10
    T_Not     shift, and go to state 11
    T_If      shift, and go to state 12
    T_While   shift, and go to state 13
    T_For     shift, and go to state 14
    T_Break   shift, and go to state 15
    T_MN      shift, and go to state 16
    T_OP      shift, and go to state 17

    constant         go to state 18
    term             go to state 19
    StartParse       go to state 91
    basic_stmt       go to state 21
    arith_exp        go to state 22
    bool_exp         go to state 23
    bool_term        go to state 24
    bool_factor      go to state 25
    break_stmt       go to state 26
    assign_stmt      go to state 27
    print_stmt       go to state 28
    finalStatements  go to state 29
    cmpd_stmt        go to state 30
    if_stmt          go to state 31
    while_stmt       go to state 32
    for_stmt         go to state 33


State 85

   39 print_stmt: T_Print T_OP term T_CP •

    $default  reduce using rule 39 (print_stmt)


State 86

   58 start_suite: T_NL • $@3 finalStatements suite

    $default  reduce using rule 57 ($@3)

    $@3  go to state 92


State 87

   56 start_suite: basic_stmt •

    $default  reduce using rule 56 (start_suite)


State 88

   46 if_stmt: T_If bool_exp T_Cln start_suite •
   47        | T_If bool_exp T_Cln start_suite • elif_stmts

    T_Elif  shift, and go to state 93
    T_Else  shift, and go to state 94

    T_Elif    [reduce using rule 46 (if_stmt)]
    T_Else    [reduce using rule 46 (if_stmt)]
    $default  reduce using rule 46 (if_stmt)

    elif_stmts  go to state 95
    else_stmt   go to state 96


State 89

   51 while_stmt: T_While bool_exp T_Cln start_suite •

    $default  reduce using rule 51 (while_stmt)


State 90

   55 for_stmt: T_For T_ID T_In T_Range • T_OP myrange T_CP T_Cln start_suite

    T_OP  shift, and go to state 97


State 91

    8 StartParse: finalStatements T_NL $@2 StartParse •

    $default  reduce using rule 8 (StartParse)


State 92

   58 start_suite: T_NL $@3 • finalStatements suite

    error     shift, and go to state 4
    T_Number  shift, and go to state 5
    T_True    shift, and go to state 6
    T_False   shift, and go to state 7
    T_ID      shift, and go to state 8
    T_Print   shift, and go to state 9
    T_Not     shift, and go to state 11
    T_If      shift, and go to state 12
    T_While   shift, and go to state 13
    T_For     shift, and go to state 14
    T_Break   shift, and go to state 15
    T_MN      shift, and go to state 16
    T_OP      shift, and go to state 17

    constant         go to state 18
    term             go to state 19
    basic_stmt       go to state 21
    arith_exp        go to state 22
    bool_exp         go to state 23
    bool_term        go to state 24
    bool_factor      go to state 25
    break_stmt       go to state 26
    assign_stmt      go to state 27
    print_stmt       go to state 28
    finalStatements  go to state 98
    cmpd_stmt        go to state 30
    if_stmt          go to state 31
    while_stmt       go to state 32
    for_stmt         go to state 33


State 93

   49 elif_stmts: T_Elif • bool_exp T_Cln start_suite elif_stmts

    T_Number  shift, and go to state 5
    T_True    shift, and go to state 6
    T_False   shift, and go to state 7
    T_ID      shift, and go to state 40
    T_Not     shift, and go to state 11
    T_MN      shift, and go to state 16
    T_OP      shift, and go to state 17
